--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,25 @@
 {
-    "name": "csineneo/flarum-ext-traditional-chinese",
+    "name": "sdlyu/flarum-ext-traditional-chinese",
     "type": "flarum-extension",
     "description": "Traditional Chinese language pack for Flarum",
     "keywords": ["locale"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Csineneo",
-            "email": "csineneo@gmail.com",
-			"homepage": "https://vivaldi.club"
+            "name": "SDLyu",
+            "email": "dragon90321@gmail.com"
         }
     ],
     "support": {
-        "source": "https://github.com/Csineneo/flarum-ext-traditional-chinese.git",
-		"issues": "https://vivaldi.club/t/flarum"
+        "source": "https://github.com/SDLyu/flarum-ext-traditional-chinese.git"
     },
     "require": {
-		"flarum/core": "^0.1.0-beta.6"
+        "flarum/core": "^0.1.0-beta.6"
     },
     "extra": {
-		"branch-alias": {
-			"dev-master": "0.1.x-dev"
-		},
+        "branch-alias": {
+	    "dev-master": "0.1.x-dev"
+	},
         "flarum-extension": {
             "title": "Chinese (zh_TW)",
             "icon": {
